# ChangeLog for sys-fs/jfsutils
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/jfsutils/ChangeLog,v 1.10 2004/04/10 01:20:53 kumba Exp $

  09 Apr 2004; Joshua Kinard <kumba@gentoo.org> jfsutils-1.1.4.ebuild:
  Marked stable on mips.

  14 Mar 2004; Tim Yamin <plasmaroo@gentoo.org> jfsutils-1.1.3.ebuild:
  Marking 1.1.3 stable on X86 since it resolves replay issues on 2.6 kernels.
  Bug #36211.

*jfsutils-1.1.5 (08 Mar 2004)

  08 Mar 2004; Brad Cowan <bcowan@gentoo.org> jfsutils-1.1.5.ebuild:
  Version bump including buffer overflow fix.

  20 Nov 2003; Sascha Schwabbauer <cybersystem@gentoo.org> jfsutils-1.1.4.ebuild:
  Added ~ppc keyword.

*jfsutils-1.1.4 (17 Nov 2003)

  17 Nov 2003; Brian Jackson <iggy@gentoo.org> jfsutils-1.1.4.ebuild:
  version bump

  13 Nov 2003; Sascha Schwabbauer <cybersystem@gentoo.org> jfsutils-1.1.3.ebuild:
  Marked ~ppc, because this version has ppc support

  09 Oct 2003; Todd Sunderlin <todd@gentoo.org> jfsutils-1.1.3.ebuild:
  Added ~sparc keyword.

  21 Sep 2003; Martin Holzer <mholzer@gentoo.org> jfsutils-1.1.3.ebuild,
  files/jfsutils-1.1.3-gentoo.diff:
  Added patch to compile with gcc-2.9x. Closes #29204.

*jfsutils-1.1.1-r1 (15 Sep 2003)

  15 Sep 2003; Seemant Kulleen <seemant@gentoo.org> jfsutils-1.1.0-r1.ebuild,
  jfsutils-1.1.0-r2.ebuild, jfsutils-1.1.1-r1.ebuild, jfsutils-1.1.1.ebuild,
  jfsutils-1.1.2.ebuild, jfsutils-1.1.3.ebuild:
  moved to sys-fs

*jfsutils-1.1.3 (08 Sep 2003)

  08 Sep 2003; Daniel Ahlberg <aliz@gentoo.org> jfsutils-1.1.3.ebuild:
  Version bump.

*jfsutils-1.1.2 (26 Mar 2003)

  28 Mar 2003; Guy Martin <gmsoft@gentoo.org> jfsutils-1.1.2.ebuild :
  Added ~hppa to KEYWORDS.

  26 Mar 2003; Brad Cowan <bcowan@gentoo.org> jfsutils-1.1.2.ebuild,
  files/digest-jfsutils-1.1.2:
  Version bump, removed errno patch as it was fixed upstream.

*jfsutils-1.1.1-r1 (10 Mar 2003)
