@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/jfsutils/jfsutils-1.1.2.ebuild,v 1.2 2004/04/10 01:20:53 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/jfsutils/jfsutils-1.1.2.ebuild,v 1.3 2004/04/26 14:38:09 agriffis Exp $
 
 S=${WORKDIR}/${P}
 DESCRIPTION="IBM's Journaling Filesystem (JFS) Utilities"
@@ -16,7 +16,7 @@ DEPEND="virtual/glibc"
 
 src_compile() {
 	econf \
-		--sbindir=/sbin
+		--sbindir=/sbin || die "econf failed"
 	emake || die
 }
 
