@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/jfsutils/jfsutils-1.1.5.ebuild,v 1.1 2004/03/08 05:18:09 bcowan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/jfsutils/jfsutils-1.1.5.ebuild,v 1.2 2004/04/26 14:38:09 agriffis Exp $
 
 S=${WORKDIR}/${P}
 DESCRIPTION="IBM's Journaling Filesystem (JFS) Utilities"
@@ -15,7 +15,7 @@ DEPEND="virtual/glibc"
 
 src_compile() {
 	econf \
-		--sbindir=/sbin
+		--sbindir=/sbin || die "econf failed"
 	emake || die
 }
 
