@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/lvm2
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.12 2004/04/24 17:05:14 max Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.13 2004/04/26 14:39:05 agriffis Exp $
+
+  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> lvm2-2.00.08.ebuild,
+  lvm2-2.00.15.ebuild:
+  Add die following econf for bug 48950
 
 *lvm2-2.00.15 (24 Apr 2004)
 
