@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/mtools
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/mtools/ChangeLog,v 1.3 2004/01/03 14:27:30 mholzer Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/mtools/ChangeLog,v 1.4 2004/04/26 14:39:57 agriffis Exp $
+
+  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> mtools-3.9.8-r1.ebuild,
+  mtools-3.9.9.ebuild:
+  Add die following econf for bug 48950
 
 *mtools-3.9.9 (03 Jan 2004)
 
